# simple-json

./: .gitignore  CMakeLists.txt  DESCRIPTION.txt  LICENSE  README.md  main.cpp
.github/workflows/: cmake.yml
cmake/: Config.cmake.in
core/types/: CMakeLists.txt  base_type.cpp  base_type.h
core/types/include/: BaseException.h  BaseType.h  Types.h  types.h
core/types/include/internal/: array_type.h  bad_conversion.h  base_exception.h  base_type.h  enum_types.h  invalid_index.h  invalid_index_exception.h  json.h  json_item.h  json_key.h  json_list.h  json_object.h  json_type.h  stream_exceptions.h
core/types/src/: BaseException.cpp  BaseType.cpp  array_type.cpp  bad_conversion.cpp  base_exception.cpp  base_type.cpp  enum_types.cpp  invalid_index.cpp  invalid_index_exception.cpp  json.cpp  json_item.cpp  json_key.cpp  json_list.cpp  json_object.cpp  json_type.cpp  stream_exceptions.cpp
debian/: changelog  control  copyright  rules
examples/: apply_jsonpatch.cpp  deserializer.cpp  getdiff_jsonpatch.cpp  indent.cpp  iterator.cpp  serializer.cpp  set_indent.cpp
include/internal/: array_type.h  bad_conversion.h  base_exception.h  base_iterator.h  deserializer.h  deserializer_exceptions.h  enum_types.h  indent.h  indent_json.h  invalid_index.h  invalid_operation.h  invalid_operator.h  iterator_exceptions.h  json.h  json_key.h  json_object.h  json_pointer.h  json_utils.h  serializer.h  stream_exceptions.h
include/internal/types/: array.h  array_type.h  base_iterator.h  enum_types.h  json.h  json_key.h  json_merge_patch.h  json_object.h  json_patch.h  json_pointer.h
include/internal/types/exceptions/: bad_conversion.h  base_exception.h  base_exceptions.h  base_iterator.h  deserializer_exceptions.h  failed_test.h  invalid_index.h  invalid_merge.h  invalid_operation.h  invalid_operator.h  invalid_patch_operation.h  invalid_pointer.h  iterator_exceptions.h  stream_exceptions.h  wrong_type.h
src/: deserializer.cpp  indent.cpp  json_merge_patch.cpp  json_utils.cpp  serializer.cpp
src/types/: array.cpp  array_type.cpp  bad_conversion.cpp  base_iterator.cpp  deserializer_exceptions.cpp  indent.cpp  invalid_index.cpp  invalid_operation.cpp  iterator_exceptions.cpp  json.cpp  json_key.cpp  json_object.cpp  json_patch.cpp  json_pointer.cpp  stream_exceptions.cpp
src/types/exceptions/: bad_conversion.cpp  base_exceptions.cpp  deserializer_exceptions.cpp  failed_test.cpp  invalid_index.cpp  invalid_merge.cpp  invalid_operation.cpp  invalid_operator.cpp  invalid_patch_operation.cpp  invalid_pointer.cpp  iterator_exceptions.cpp  stream_exceptions.cpp  wrong_type.cpp
